# test_cs_easy_handeye

./: Program.cs  README.md  test_cs_easy_handeye.csproj  test_cs_easy_handeye.sln
Properties/: Resources.Designer.cs
api_phoxi/ChangeColorSettings/: CMakeLists.txt  Program.cs  ReadMe.txt
api_phoxi/ChangeProfile/: CMakeLists.txt  Program.cs  ReadMe.txt
api_phoxi/ChangeSettings/: CMakeLists.txt  Program.cs
api_phoxi/ConnectAndGrab/: CMakeLists.txt  Program.cs
api_phoxi/FullAPI/: CMakeLists.txt  Program.cs
api_phoxi/MaintenanceCommands/: CMakeLists.txt  Program.cs
api_phoxi/MotionCamChangeSettings/: CMakeLists.txt  Program.cs  ReadMe.txt
api_phoxi/PointCloudCalculation/: CMakeLists.txt  Program.cs
api_phoxi/TwoScannersMultithread/: CMakeLists.txt  Program.cs  ReadMe.txt
api_phoxi/WinForms/vc120/: WinFormsNoCMake.sln
api_phoxi/WinForms/vc120/WinForms/: FormMain.cs  Program.cs  ReadMe.txt  WinFormsNoCMake.csproj
api_phoxi/WinForms/vc120/WinForms/Properties/: Resources.Designer.cs
api_phoxi/WinForms/vc140/WinForms/: FormMain.Designer.cs  WinFormsNoCMake.csproj
api_phoxi/WinForms/vc140/WinForms/Properties/: AssemblyInfo.cs  Settings.Designer.cs
form_core/: Form1.Designer.cs  Form1.cs  Form1.resx
form_opc/: DiscoverServerDlg.cs  DiscoverServerDlg.designer.cs  ExceptionDlg.cs  ExceptionDlg.designer.cs
img_ico/: Class1.cs
utils_handeye/: Cameracalibration.cs  ConversionAngle.cs  ConversionMatrix.cs  Data.cs  Definetype.cs  EyeinHandCalibration.cs  Test.cs  Utilsopencv.cs  Utilsother.cs  Utilsquantification.cs
utils_opc/: ClientUtils.cs  FilterDeclaration.cs  FormUtils.cs  OpcUaClient.cs  OpcUaStatusEventArgs.cs
